--- a/public/public/GameLittle.html
+++ b/public/public/GameLittle.html
@@ -6,11 +6,4 @@
     <link rel=icon type=image/png href=../favicon.png>
     </head><body>
     
-    <script src=littlejs.js?192></script>
-    <script src=gameObjects.js?192></script>
-    <script src=gameCharacter.js?192></script>
-    <script src=gamePlayer.js?192></script>
-    <script src=gameEffects.js?192></script>
-    <script src=gameLevel.js?192></script>
-    <script src=gameLevelData.js?192></script>
-    <script src=game.js?192></script>
+    <script src=game.js?192 type=module></script>
