--- a/public/public/GameLittle.html
+++ b/public/public/GameLittle.html
@@ -3,7 +3,7 @@
     <meta name=viewport content=width=device-width,height=device-height,initial-scale=1,maximum-scale=1>
     <meta name=apple-mobile-web-app-capable content=yes>
     <meta name=mobile-web-app-capable content=yes>
-    <link rel=icon type=image/png href=../favicon.png>
+    <link rel=icon type=image/png href="favicon.ico">
     </head><body>
     
     <script src=game.js?192 type=module></script>
