update little js gaame

--- a/public/public/GameLittle.html
+++ b/public/public/GameLittle.html
@@ -6,4 +6,5 @@
     <link rel=icon type=image/png href="favicon.ico">
     </head><body>
     
-    <script src=game.js?192 type=module></script>
+    <script src=game.js?192 type=module defer></script>
+    <script src=gameLevelData.js?192></script>
